--- a/package.json
+++ b/package.json
@@ -27,6 +27,15 @@
     "@radix-ui/react-toggle": "^1.1.8",
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@tailwindcss/vite": "^4.1.6",
+    "@tiptap/extension-color": "^2.14.0",
+    "@tiptap/extension-image": "^2.14.0",
+    "@tiptap/extension-task-item": "^2.14.0",
+    "@tiptap/extension-task-list": "^2.14.0",
+    "@tiptap/extension-text-align": "^2.14.0",
+    "@tiptap/extension-typography": "^2.14.0",
+    "@tiptap/pm": "^2.14.0",
+    "@tiptap/react": "^2.14.0",
+    "@tiptap/starter-kit": "^2.14.0",
     "@vitejs/plugin-react": "^4.4.1",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
