--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "dayjs": "^1.11.13",
     "lucide-react": "^0.509.0",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "^5.3.31",
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
