--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.509.0",
     "next-themes": "^0.4.6",
     "pdfjs-dist": "^5.3.31",
