--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react": "^19.1.0",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
+    "react-paginate": "8.3.0",
     "react-pdf": "^9.2.1",
     "react-router-dom": "^7.6.0",
     "sonner": "^2.0.3",
