--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "embla-carousel-react": "^8.6.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.509.0",
     "next-themes": "^0.4.6",
     "pdfjs-dist": "^5.3.31",
